Update GenericUrlBasedFetcher.java